--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 150px;
 }
 
 .half-width{
@@ -21,6 +22,9 @@ section{
     width: 40%;
 
 }
+
+
+
 .link-button{
  text-decoration: none;
 background-image:linear-gradient(orange,tomato) ; 
@@ -28,6 +32,13 @@ padding:10px 40px ;
 color: white;
 font-weight: 700;
  border-radius: 5px;
+}
+
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+
 }
 
 .top-banner{
